welcome.lessons.welcome.array.island.Island.scala.error
island:5: error: identifier expected but integer literal found.
		if(num[i] < num [i - 1]){
                                     ^island:8: error: ']' expected but '}' found.
	}
        ^